# swo-aws-extension

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  azure-pipelines.yml  compose.yaml  dev.Dockerfile  docker-compose.yml  makefile  prod.Dockerfile  pyproject.toml  seller_external_id_map.json  setup.cfg  sonar-project.properties
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pr-build-merge.yml  release.yml
docs/: architecture.md  contributing.md  deployment.md  documentation.md  external-integrations.md  migrations.md  testing.md
helm/swo-extension-aws/: Chart.yaml  values.yaml
helm/swo-extension-aws/templates/: _helpers.tpl
make/: aws.mk  common.mk  external_tools.mk
migrations/: 20260414121815_ccp_onboard_and_check_status.py  20260415000000_project_creation_phase.py  20260507080455_change_draft_validation.py  20260610073112_split_billing.py  20260622000000_service_discount_type.py  20260622142940_termination_draft_validation.py
swo/mpt/client/: errors.py  mpt.py  utils.py
swo_aws_extension/: apps.py  config.py  constants.py  default.py  extension.py  initializer.py  logger.py  models.py  notifications.py  openid.py  parameters.py  shared.py
swo_aws_extension/airtable/: errors.py  finops_table.py  models.py  op_scale_table.py  pma_table.py
swo_aws_extension/aws/: client.py  config.py  constants.py  errors.py
swo_aws_extension/billing/: billing_invoice_attachment_creator.py  billing_journal_service.py  billing_report_creator.py  journal_manager.py  providers.py
swo_aws_extension/billing/generators/: agreement.py  authorization.py  billing_report_rows.py  currency.py  invoice.py  journal_line.py  report_processor.py  usage.py  usage_utils.py
swo_aws_extension/billing/models/: context.py  invoice.py  journal.py  journal_line.py  journal_result.py  search.py  usage.py
swo_aws_extension/crm_service_client/: __init__.py  config.py
swo_aws_extension/file_builder/: zip_builder.py
swo_aws_extension/flows/: cloud_orchestrator_utils.py  error.py  flow_utils.py  order.py  order_utils.py  template.py
swo_aws_extension/flows/close_account/: flow.py  last_account_ticket.py
swo_aws_extension/flows/fulfillment/: __init__.py  base.py  pipelines.py
swo_aws_extension/flows/jobs/: billing_journal.py  finops_entitlements_processor.py  invitations_report_creator.py  op_scale_entitlements_processor.py  pending_orders_information_report_creator.py  pool_notifications.py  process_aws_invitations.py  query_order_processor.py  synchronize_agreements.py
swo_aws_extension/flows/steps/: __init__.py  assign_mpa.py  assign_pma.py  await_crm_ticket.py  base.py  ccp_onboard.py  check_billing_transfer_invitation.py  check_channel_handshake_status.py  check_customer_roles.py  check_onboard_status.py  close_aws_account.py  complete_order.py  configure_apn_program.py  contract_card.py  create_billing_export_bucket.py  create_billing_transfer_invitation.py  create_channel_handshake.py  create_linked_account.py  create_new_aws_environment.py  create_service_crm_ticket.py  create_subscription.py  errors.py  (+19 more)
swo_aws_extension/key_vault/: ccp.py
swo_aws_extension/processor/: processor.py
swo_aws_extension/processors/: processor.py
swo_aws_extension/swo/: auth.py  azure_blob_uploader.py  base_client.py  confluence_client.py  confluence_uploader.py  excel_report_builder.py  key_vault.py
swo_aws_extension/swo_ccp/: client.py
swo_aws_extension/swo_crm_service/: __init__.py  client.py
swo_aws_extension/swo_finops/: client.py
swo_aws_extension/templates/: email.html  notification.html
swo_aws_extension/utils/: date_parser.py  decorators.py
swo_ccp_client/: client.py
swo_crm_service_client/: __init__.py  client.py
swo_finops_client/: client.py
swo_mpt_api/: __init__.py  client.py  collection.py  httpquery.py
swo_mpt_api/billing/: __init__.py  billing_client.py  journal_client.py
swo_mpt_api/models/: hints.py
swo_rql/: __init__.py  query_builder.py
swo_runtime/: default.py  env_setup.py  initializer.py
tests/: conftest.py  test_apps.py  test_config.py  test_extension.py  test_initializer.py  test_logger.py  test_models.py  test_notifications.py  test_openid.py  test_parameters.py  test_s3_parquet_path.py  test_shared.py
tests/airtable/: test_finops_table.py  test_models.py  test_op_scale_table.py  test_pma_table.py
tests/aws/: test_client.py  test_config.py  test_config_azure.py  test_errors.py
tests/billing/: conftest.py  test_billing_invoice_attachment_creator.py  test_billing_journal_service.py  test_billing_report_creator.py  test_journal_manager.py  test_providers.py
tests/commands/: test_check_pool_account_notifications.py  test_demo.py  test_generate_billing_journals.py  test_refresh_ccp_openid_secret.py
tests/django/: settings.py
tests/file_builder/: test_zip_builder.py
tests/fixtures/: seller_external_id_map.json
tests/flows/: test_cloud_orchestrator_utils.py  test_error.py  test_flow_utils.py  test_order.py  test_order_parameters.py  test_order_utils.py  test_template.py
tests/key_vault/: test_ccp.py
tests/processor/: test_processor.py
tests/swo/: test_auth.py  test_azure_blob_uploader.py  test_base_client.py  test_confluence_client.py  test_excel_report_builder.py  test_key_vault.py
tests/swo_aws_extension/: test_default.py  test_initializer.py  test_openid.py  test_parameters.py
tests/swo_ccp/: test_client.py
tests/swo_ccp_client/: test_ccp_client.py
tests/swo_crm_service/: test_client.py
tests/swo_crm_service_client/: test_crm_client.py
tests/swo_finops/: test_client.py
tests/swo_finops_client/: test_finops_client.py
tests/swo_mpt_api/: test_billing_journal_attachemnts.py  test_billing_journal_charges_client.py  test_billing_journal_client.py  test_client.py  test_httpquery.py
tests/swo_rql/: test_expressions.py  test_query_builder.py  test_rql_base.py
tests/swo_runtime/: test_default.py  test_env_setup.py  test_initializer.py
tests/utils/: test_date_parser.py  test_decorators.py
(+389 files in other folders)
