[project]
name = "swo-aws-extension"
version = "0.0.0"
description = "Amazon Web Service extension for SWO Marketplace Platform"
authors = [{ name = "SoftwareOne AG" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = { text = "Apache-2.0 license" }

dependencies = [
    "azure-core>=1.33.0,<2",
    "boto3==1.39.*",
    "django==4.2.*",
    "jinja2==3.1.*",
    "markdown-it-py==3.0.*",
    "mpt-extension-sdk==5.10.*",
    "openpyxl==3.1.*",
    "phonenumbers==8.13.*",
    "pyairtable==2.3.*",
    "pymsteams==0.2.*",
    "regex>=2024.7.24,<2025",
    "requests==2.32.*",
    "types-openpyxl==3.1.*",
]

[project.entry-points."swo.mpt.ext"]
app_config = "swo_aws_extension.apps:ExtensionConfig"

[dependency-groups]
dev = [
    "flake8-pyproject>=1.2.3",
    "freezegun==1.4.*",
    "ipdb==0.13.*",
    "ipython==8.*",
    "mypy==1.8.*",
    "pre-commit==3.6.*",
    "pytest==7.4.*",
    "pytest-cov==4.1.*",
    "pytest-deadfixtures==2.2.*",
    "pytest-django==4.7.*",
    "pytest-mock==3.12.*",
    "pytest-randomly==3.15.*",
    "pytest-xdist==3.5.*",
    "requests-mock==1.12.*",
    "responses==0.24.*",
    "ruff==0.12.11",  # force ruff version to have same formatting everywhere
    "types-openpyxl==3.1.*",
    "types-requests==2.31.*",
    "wemake-python-styleguide==1.3.*",
]
runtime = [
    "azure-monitor-opentelemetry-exporter==1.0.0b25",
    "click==8.1.*",
    "debugpy==1.8.*",
    "gunicorn==23.0.*",
    "opentelemetry-api==1.30.*",
    "opentelemetry-instrumentation-django==0.51b0",
    "opentelemetry-instrumentation-logging==0.51b0",
    "opentelemetry-instrumentation-requests==0.51b0",
    "opentelemetry-instrumentation-botocore==0.51b0",
    "opentelemetry-sdk==1.30.*",
    "pyfiglet==1.0.*",
    "rich==14.1.*",
    "watchfiles==0.21.*",
]

[tool.uv]
default-groups = [
    "dev",
    "runtime",
]

[tool.hatch.build.targets.sdist]
include = ["swo_aws_extension"]

[tool.hatch.build.targets.wheel]
include = ["swo_aws_extension"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-report=xml --import-mode=importlib"
DJANGO_SETTINGS_MODULE = "tests.django.settings"
log_cli = false
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "tests/**",
    "swo_aws_extension/default.py",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]

[tool.flake8]
aaa_act_block_style = "large"
doctests = true
extend-ignore = ["WPS226"]
extend-exclude = [".venv"]
format = "wemake"
max-imports = 17
max-line-length=100
select = ["E999", "WPS"]
show-source = true
statistics = false
# To be fixed and removed
per-file-ignores = [
    "swo_aws_extension/airtable/models.py: WPS202 WPS221 WPS229 WPS420 WPS431 WPS602",
    "swo_aws_extension/apps.py: WPS300",
    "swo_aws_extension/aws/client.py: WPS111 WPS210 WPS214 WPS229 WPS301 WPS338 WPS463",
    "swo_aws_extension/aws/config.py: WPS121 WPS122 WPS214 WPS338 WPS420 WPS432",
    "swo_aws_extension/aws/errors.py: WPS111 WPS225 WPS231 WPS237 WPS238 WPS301 WPS328 WPS430 WPS469 WPS505",
    "swo_aws_extension/constants.py: WPS202 WPS407",
    "swo_aws_extension/default.py: WPS111 WPS407",
    "swo_aws_extension/extension.py: WPS111 WPS229",
    "swo_aws_extension/flows/fulfillment/__init__.py: WPS412",
    "swo_aws_extension/flows/fulfillment/base.py: WPS210 WPS213 WPS221 WPS231 WPS232 WPS400",
    "swo_aws_extension/flows/fulfillment/pipelines.py: WPS235",
    "swo_aws_extension/flows/jobs/billing_journal/line_processors/base_processor.py: WPS214",
    "swo_aws_extension/flows/jobs/billing_journal/billing_journal_generator.py: WPS111 WPS201 WPS204 WPS205 WPS210 WPS211 WPS213 WPS214 WPS220 WPS221 WPS229 WPS230 WPS231 WPS235 WPS237 WPS238 WPS338 WPS414 WPS432 WPS504 WPS529 WPS602",
    "swo_aws_extension/flows/jobs/billing_journal/models.py: WPS115 WPS202 WPS336",
    "swo_aws_extension/flows/jobs/billing_journal/invoice_details.py: WPS211",
    "swo_aws_extension/flows/jobs/pool_notifications.py: WPS210 WPS231 WPS232 WPS426 WPS504 WPS529",
    "swo_aws_extension/flows/jobs/process_aws_invitations.py: WPS210 WPS229 WPS432",
    "swo_aws_extension/flows/jobs/synchronize_agreements.py: WPS111 WPS204 WPS210 WPS213 WPS221 WPS229 WPS231 WPS232 WPS327 WPS426",
    "swo_aws_extension/flows/order.py: WPS111 WPS202 WPS214 WPS235 WPS237 WPS336 WPS338",
    "swo_aws_extension/flows/steps/__init__.py: WPS410 WPS412",
    "swo_aws_extension/flows/steps/assign_mpa.py: WPS111 WPS204 WPS210 WPS213 WPS229 WPS237 WPS338 WPS602",
    "swo_aws_extension/flows/steps/ccp_onboard.py: WPS111 WPS210 WPS229",
    "swo_aws_extension/flows/steps/create_linked_account.py: WPS111 WPS213 WPS229 WPS235",
    "swo_aws_extension/flows/steps/create_subscription.py: WPS210",
    "swo_aws_extension/flows/steps/invitation_links.py: WPS111 WPS210 WPS213 WPS221 WPS229 WPS231 WPS307 WPS338 WPS504 WPS529",
    "swo_aws_extension/flows/steps/register_transfered_mpa_airtable.py: WPS338",
    "swo_aws_extension/flows/steps/service_crm_steps.py: WPS202 WPS235 WPS617",
    "swo_aws_extension/flows/steps/setup_context.py: WPS204 WPS213 WPS338 WPS504",
    "swo_aws_extension/flows/steps/validate.py: WPS213 WPS504",
    "swo_aws_extension/flows/template.py: WPS212 WPS231 WPS232 WPS602",
    "swo_aws_extension/flows/validation/__init__.py: WPS412",
    "swo_aws_extension/flows/validation/base.py: WPS229 WPS231 WPS420 WPS504",
    "swo_aws_extension/flows/validation/purchase.py: WPS202 WPS204 WPS235",
    "swo_aws_extension/management/commands/generate_billing_journals.py: WPS111 WPS210 WPS231 WPS237 WPS238 WPS432",
    "swo_aws_extension/management/commands/upload_journal.py: WPS210 WPS213 WPS237",
    "swo_aws_extension/management/commands/upload_journal_attachment.py: WPS111 WPS210 WPS229 WPS338",
    "swo_aws_extension/management/commands_helpers/__init__.py: WPS410 WPS412",
    "swo_aws_extension/notifications.py: WPS202 WPS213 WPS229 WPS430",
    "swo_aws_extension/parameters.py: WPS111 WPS202 WPS204 WPS231",
    "swo_aws_extension/swo_ccp/client.py: WPS210 WPS214 WPS338 WPS432 WPS458 WPS504",
    "swo_aws_extension/swo_crm_service/__init__.py: WPS410 WPS412",
    "swo_aws_extension/swo_crm_service/client.py: WPS121 WPS122 WPS214 WPS221 WPS237 WPS338 WPS420 WPS432 WPS504",
    "swo_aws_extension/swo_finops/client.py: WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
    "swo_mpt_api/__init__.py: WPS410 WPS412",
    "swo_mpt_api/billing/__init__.py: WPS410 WPS412",
    "swo_mpt_api/billing/journal_client.py: WPS110 WPS214 WPS221",
    "swo_mpt_api/httpquery.py: WPS110 WPS111 WPS214 WPS338",
    "swo_mpt_api/models/hints.py: WPS110 WPS115 WPS202 WPS453",
    "swo_rql/__init__.py: WPS111 WPS410 WPS412",
    "swo_rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
    "tests/airtable/test_models.py: WPS202 WPS218",
    "tests/aws/test_client.py: WPS202 WPS204",
    "tests/aws/test_config.py: WPS202",
    "tests/aws/test_errors.py: WPS202",
    "tests/django/settings.py: WPS407",
    "tests/flows/fulfillment/test_base.py: WPS114 WPS202 WPS210 WPS211 WPS213 WPS432",
    "tests/flows/jobs/billing_journal/test_billing_journal_generator.py: WPS",
    "tests/flows/jobs/test_pool_notifications.py: WPS211 WPS218",
    "tests/flows/jobs/test_process_aws_invitations.py:  WPS202 WPS210 WPS211 WPS430 WPS432",
    "tests/flows/jobs/test_synchronize_agreements.py: WPS202 WPS204 WPS210 WPS211 WPS301 WPS420",
    "tests/flows/steps/service_crm_steps/test_transfer_with_organization.py:  WPS202 WPS210",
    "tests/flows/steps/validate/test_purchase_transfer_without_organization.py: WPS111 WPS210 WPS432",
    "tests/flows/steps/test_assign_mpa.py: WPS111 WPS202 WPS204 WPS210 WPS211 WPS221 WPS237 WPS301 WPS430 WPS458",
    "tests/flows/steps/test_ccp_onboard.py: WPS210 WPS211 WPS432",
    "tests/flows/steps/test_complete_order.py: WPS210 WPS211",
    "tests/flows/steps/test_create_linked_account.py: WPS202 WPS204 WPS210 WPS211 WPS219 WPS221",
    "tests/flows/steps/test_create_subscription.py: WPS202 WPS204 WPS210 WPS211 WPS420",
    "tests/flows/steps/test_finops.py: WPS202 WPS211",
    "tests/flows/steps/test_invitation_links.py: WPS202 WPS210 WPS211 WPS430",
    "tests/flows/steps/test_mpa_pre_configuration.py: WPS210 WPS211",
    "tests/flows/steps/test_register_transfered_mpa_airtable.py: WPS210 WPS211",
    "tests/flows/steps/test_service_crm_steps.py: WPS110 WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS218",
    "tests/flows/steps/test_setup_context.py: WPS202 WPS204 WPS210 WPS211 WPS430 WPS432",
    "tests/flows/steps/test_validate.py: WPS111 WPS210 WPS218 WPS432",
    "tests/flows/validation/test_base.py: WPS210 WPS432",
    "tests/flows/validation/test_purchase.py: WPS202 WPS204 WPS210",
    "tests/flows/validation/test_steps.py: WPS210",
    "tests/flows/test_template.py: WPS211",
    "tests/flows/test_order.py: WPS202 WPS204 WPS210 WPS218 WPS430",
    "tests/management/commands/test_generate_billing_journals.py: WPS202 WPS204 WPS432",
    "tests/swo_ccp/test_client.py: WPS202 WPS211 WPS301",
    "tests/swo_crm_service/test_client.py: WPS118 WPS202 WPS204",
    "tests/swo_finops/test_client.py: WPS202 WPS204 WPS210",
    "tests/swo_mpt_api/billing/test_billing_client.py: WPS110 WPS111 WPS202 WPS204 WPS210 WPS432",
    "tests/swo_mpt_api/billing/test_journal_client.py: WPS110 WPS111 WPS202 WPS204 WPS210 WPS432",
    "tests/swo_mpt_api/test_client.py: WPS110",
    "tests/swo_mpt_api/test_httpquery.py: WPS110 WPS116 WPS202 WPS221",
    "tests/swo_rql/test_query_builder.py: WPS110 WPS111 WPS122 WPS202 WPS204 WPS210 WPS218 WPS221 WPS347 WPS420 WPS431 WPS432 WPS473 WPS604",
    "tests/conftest.py: WPS110 WPS111 WPS118 WPS201 WPS202 WPS210 WPS211 WPS227 WPS231 WPS235 WPS237 WPS404 WPS421 WPS429 WPS430 WPS432 WPS504",
    "tests/test_apps.py: WPS111 WPS421",
    "tests/test_extension.py: WPS432",
    "tests/test_initializer.py: WPS111 WPS213 WPS218 WPS230 WPS431",
    "tests/test_notifications.py: WPS202 WPS211 WPS213 WPS221 WPS235 WPS462",
    "tests/test_parameters.py: WPS202 WPS235"
]

[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
target-version = "py312"
extend-exclude = [".vscode", ".devcontainer", "swo"]
output-format = "full"
line-length = 100

[tool.ruff.format]
quote-style = "double"
# This is only required because we have invalid on-purpose code in docstrings:
docstring-code-format = false

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
  "COM812", # trailing comma, conflicts with `ruff format`
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D105", # docstring for magic methods
  "D106",
  "D107",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
  "TRY003",  # long exception messages from `tryceratops`
]
external = [ "WPS" ]

# Plugin configs:
flake8-import-conventions.banned-from = [ "ast", "datetime" ]
flake8-import-conventions.aliases = { datetime = "dt" }
flake8-quotes.inline-quotes = "double"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "D101", # missing docstring in public class
  "D102", # missing docstring in public methods
  "D103", # missing docstring in public function
  "S101", # asserts
  "S105", # hardcoded passwords
  "S404", # subprocess calls are for tests
  "S603", # do not require `shell=True`
  "S607", # partial executable paths
]

[tool.ruff.lint.isort]
known-third-party = ["swo"]

[tool.mypy]
warn_no_return = false

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyfiglet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymsteams.*"
ignore_missing_imports = true
